--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Number Guessing Game</title>
   </head>
-    <h1>Start should change the Background color every second</h1>
+    <h1>Press start button to change the color. </h1>
     <button id="start">Start</button>
+
+    <h1>Press stop button to stop changing color.</h1>
     <button id="stop">Stop</button>
+    
     <script src="scripts.js"></script>
   </body>
 </html>
